# Aegis-Core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.es.md  README.md  SECURITY.md  build.sh  deny.toml  deploy.py  pr_body.txt
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  release-please-config.json  release-please-manifest.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: .gitignore  README.md  app.json  package-lock.json  package.json  tsconfig.json
auditorias/: Gemini_3_Flash.md  RECOMENDACIONES_CONSOLIDADAS.md  big-pickle.md  claude-sonnet-4-6.md  gpt-oss-120b_free.md  minimax-m2.5-free_AUDIT.md
distro/: README.md
docs/: BENCHMARKS_PINCHBENCH.md  CLI_REFERENCE.md  DOGFOODING.md  MICROKERNEL_ARCHITECTURE.md  MODEL_INVESTIGATION.md  NATIVE_TRAINING_ENGINE.md  OPERATIONS_GUIDE.md  ROADMAP_COGNITIVE_OS.md  SPONSOR_PAGE.md
governance/: ADR-CAA-015.md  AEGIS_CONTEXT.md  AEGIS_MASTER_CODEX.md  AGENT_PROMPTS.md  DISPATCH_EPICS_38_39_40.md  DISPATCH_EPIC_41.md  DISPATCH_PLAN.md  EPIC_42_REALIGNMENT.md  EPIC_43_HIERARCHICAL_AGENTS.md  EPIC_44_DEVELOPER_WORKSPACE.md  EPIC_45_COGNITIVE_AGENT_ARCHITECTURE.md  EPIC_46_PUBLIC_LAUNCH.md  EPIC_47_AGENT_PROTOCOL_V2.md  EPIC_48_SHELL_OBSERVABILITY.md  EPIC_49_COGNITIVE_LOOP.md  EPIC_50_AGENT_INBOX.md  EPIC_53_STABILIZATION.md  EPIC_54_AEGIS_CONNECT.md  EPIC_56_PUBLIC_MVP.md  EPIC_57_LINUX_DISTRO.md  IDEA_AEGIS_CONNECT.md  LAUNCH_READINESS_AUDIT.md  README.md  TICKETS_MASTER.md  TICKETS_MASTER_tail.md
installer/: .env.example  Dockerfile  README.md  aegis  aegis.ps1  aegis.service  docker-compose.yml  install.ps1  install.sh  setup-service.sh  uninstall.sh
kernel/: README.md  clippy_output.txt
kernel/crates/aegis-connect-relay/: CHANGELOG.md  Cargo.toml
kernel/crates/aegis-connect-relay/src/: main.rs
kernel/crates/aegis-supervisor/: CHANGELOG.md  Cargo.toml
kernel/crates/aegis-supervisor/src/: health.rs  main.rs  supervisor.rs  windows_service.rs
kernel/crates/ank-cli/: CHANGELOG.md  Cargo.toml
kernel/crates/ank-cli/src/: main.rs
kernel/crates/ank-core/: .gitignore  CHANGELOG.md  Cargo.toml
kernel/crates/ank-core/config/: agent_prompts.yaml
kernel/crates/ank-core/src/: lib.rs  pcb.rs  speaker_id.rs
kernel/crates/ank-core/src/agents/: chat_context.rs  context.rs  event.rs  instructions.rs  message.rs  mod.rs  node.rs  orchestrator.rs  persistence.rs  project.rs  project_ledger.rs  tool_registry.rs  tree.rs
kernel/crates/ank-core/src/chal/: autocorrect.rs  hardware.rs  mod.rs
kernel/crates/ank-core/src/chal/drivers/: cloud.rs  cloud_voice.rs  embeddings.rs  mod.rs  native.rs
kernel/crates/ank-core/src/chal/drivers/siren/: elevenlabs.rs  espeak.rs  groq_stt.rs  mod.rs  voxtral.rs  whisper_local.rs
kernel/crates/ank-core/src/chronos/: mod.rs
kernel/crates/ank-core/src/citadel/: identity.rs
kernel/crates/ank-core/src/dag/: mod.rs
kernel/crates/ank-core/src/enclave/: master.rs  mod.rs
kernel/crates/ank-core/src/executor/: mod.rs  terminal.rs
kernel/crates/ank-core/src/git/: bridge.rs  mod.rs
kernel/crates/ank-core/src/oauth/: mod.rs
kernel/crates/ank-core/src/plugins/: mod.rs  signer.rs  watcher.rs
kernel/crates/ank-core/src/pr_manager/: mod.rs
kernel/crates/ank-core/src/router/: catalog.rs  discovery.rs  key_pool.rs  mod.rs  models.yaml  modules.rs  rate_tracker.rs  siren.rs  syncer.rs
kernel/crates/ank-core/src/scheduler/: compiler.rs  graph.rs  mod.rs  persistence.rs
kernel/crates/ank-core/src/scribe/: diagnostic.rs  mod.rs
kernel/crates/ank-core/src/security/: mod.rs
kernel/crates/ank-core/src/swarm/: client.rs  mod.rs  otp.rs
kernel/crates/ank-core/src/syscalls/: maker.rs  mod.rs
kernel/crates/ank-core/src/telemetry/: mod.rs
kernel/crates/ank-core/src/trainer/: mod.rs
kernel/crates/ank-core/src/tunnel/: client.rs  mod.rs
kernel/crates/ank-core/src/vcm/: mod.rs  swap.rs
kernel/crates/ank-core/src/workspace/: config.rs  mod.rs
kernel/crates/ank-core/users/test_maxlen_user_1776979430047/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004083897/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004099237/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004113646/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004135489/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004149386/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004549139/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004773111/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777004782998/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777224926558/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777224929216/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777225056379/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777257919273/: memory.db
kernel/crates/ank-core/users/test_maxlen_user_1777315284479/: memory.db
kernel/crates/ank-http/: CHANGELOG.md  Cargo.toml
kernel/crates/ank-http/src/: citadel.rs  config.rs  error.rs  lib.rs  rate_limiter.rs  state.rs  static_files.rs
kernel/crates/ank-http/src/routes/: admin.rs  agents.rs  auth.rs  chat_history.rs  engine.rs  fs.rs  mod.rs  music_api.rs  oauth_api.rs  openapi.rs  persona_api.rs  providers.rs  prs.rs  router_api.rs  siren_api.rs  status.rs  stt_download.rs  system_config_api.rs  train.rs  workspace.rs
kernel/crates/ank-http/src/ws/: agents.rs  chat.rs  mod.rs  siren.rs
kernel/crates/ank-mcp/: CHANGELOG.md  Cargo.toml
kernel/crates/ank-mcp/src/: client.rs  error.rs  lib.rs  registry.rs  sse.rs  stdio.rs  transport.rs
kernel/crates/ank-server/: CHANGELOG.md  Cargo.toml
kernel/crates/ank-server/src/: main.rs  server.rs
kernel/plugins_src/: CHANGELOG.md  Cargo.toml
kernel/plugins_src/src/: lib.rs
shell/: README.md
tools/: README.md  _debug_pinchbench.py  run_audit.py  smoke_test.py  sync_tickets_master.py  update_models.py
(+272 files in other folders)
