[package]
name = "aegis-supervisor"
version = "0.1.6"
edition = "2021"
license = "MIT"

[[bin]]
name = "aegis-supervisor"
path = "src/main.rs"

[dependencies]
tokio.workspace              = true
anyhow.workspace             = true
clap.workspace               = true
serde.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
dirs.workspace               = true
toml.workspace               = true
reqwest.workspace            = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
