[package]
name = "ank-cli"
version = "0.1.4"
edition = "2021"
license = "MIT"

[[bin]]
name = "ank"
path = "src/main.rs"

[dependencies]
ank-proto = { path = "../ank-proto" }
tonic.workspace     = true
tokio.workspace     = true
tokio-stream.workspace = true
anyhow.workspace    = true
clap = { workspace = true, features = ["env"] }
serde_json.workspace = true
tracing.workspace   = true
tracing-subscriber.workspace = true
