[package]
name = "ank-cli"
version = "0.1.5"
edition = "2021"
license = "MIT"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
ank-proto = { path = "../ank-proto" }
tonic.workspace     = true
tokio.workspace     = true
tokio-stream.workspace = true
anyhow.workspace    = true
clap = { workspace = true, features = ["derive", "env"] }
serde_json.workspace = true
tracing.workspace   = true
tracing-subscriber.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
colored = "2.1"
regex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
