[package]
name = "ank-core"
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ank-proto  = { path = "../ank-proto" }
ank-mcp    = { path = "../ank-mcp" }

tokio.workspace            = true
tonic.workspace            = true
serde.workspace            = true
serde_json.workspace       = true
serde_yaml.workspace       = true
anyhow.workspace           = true
thiserror.workspace        = true
uuid.workspace             = true
chrono.workspace           = true
tracing.workspace          = true
async-trait.workspace      = true
tokio-stream.workspace     = true
futures.workspace          = true
futures-util.workspace     = true
regex.workspace            = true
reqwest.workspace          = true
bytes.workspace            = true
prost-types.workspace      = true
wasmtime.workspace         = true
wasmtime-wasi.workspace    = true
mdns-sd.workspace          = true
sha2.workspace             = true
hmac.workspace             = true
base64.workspace           = true
ed25519-dalek.workspace    = true
argon2.workspace           = true
rusqlite.workspace         = true
sysinfo.workspace          = true
git2.workspace             = true
arrow.workspace            = true
arrow-array.workspace      = true
arrow-schema.workspace     = true
arrow-buffer.workspace     = true
notify.workspace           = true
notify-debouncer-mini.workspace = true
dirs.workspace             = true
tokio-util.workspace       = true
encoding_rs                = "0.8.35"
urlencoding               = "2"
hex.workspace             = true
boa_engine.workspace      = true

llama-cpp-2 = { workspace = true, optional = true }
usearch = "2.24"

[features]
default    = []
local_llm  = ["dep:llama-cpp-2"]
full_local  = ["local_llm"]

[dev-dependencies]
tempfile = "3"
