[package]
name = "ank-http"
version = "0.1.0"
edition = "2021"

[dependencies]
ank-core  = { path = "../ank-core" }
ank-proto = { path = "../ank-proto" }

axum.workspace            = true
tower        = { workspace = true, features = ["util"] }
tower-http   = { workspace = true, features = ["cors", "fs", "trace"] }
tokio.workspace           = true
tokio-stream       = { workspace = true, features = ["sync"] }

serde.workspace           = true
serde_json.workspace      = true
anyhow.workspace          = true
thiserror.workspace       = true
tracing.workspace         = true
uuid.workspace            = true
sha2.workspace            = true
hex.workspace             = true
bytes.workspace           = true
futures.workspace         = true
futures-util.workspace    = true
async-trait.workspace     = true
dirs.workspace            = true
reqwest.workspace          = true
regex.workspace            = true

mime_guess = { version = "2.0", optional = true }
include_dir = { version = "0.7", optional = true }

[dev-dependencies]
axum-test = "15"
tokio     = { workspace = true, features = ["test-util"] }

[features]
embed-ui = ["dep:include_dir", "dep:mime_guess"]
