[package]
name = "ank-mcp"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio.workspace        = true
tokio-stream.workspace = true
serde.workspace        = true
serde_json.workspace   = true
anyhow.workspace       = true
thiserror.workspace    = true
tracing.workspace      = true
async-trait.workspace  = true
async-stream.workspace = true
futures.workspace      = true
futures-util.workspace = true
reqwest.workspace      = true
bytes.workspace        = true
uuid.workspace         = true

[dev-dependencies]
warp = "0.3"
