[package]
name = "ank-server"
version = "0.1.24"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "ank-server"
path = "src/main.rs"

[dependencies]
ank-core    = { path = "../ank-core" }
ank-proto   = { path = "../ank-proto" }
ank-http    = { path = "../ank-http" }

tokio.workspace              = true
tokio-stream.workspace       = true
tonic.workspace              = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
dirs.workspace               = true
uuid.workspace               = true
openssl                      = { workspace = true, optional = true }
rustls                       = { version = "0.23", features = ["ring"] }

[features]
full_local       = ["ank-core/full_local"]
embed-ui         = ["ank-http/embed-ui"]
vendored-openssl = ["openssl"]
