[package]
name = "ank-server"
version = "0.1.85"
edition = "2021"
license = "MIT"

[[bin]]
name = "ank-server"
path = "src/main.rs"

[dependencies]
ank-core    = { path = "../ank-core" }
ank-proto   = { path = "../ank-proto" }
ank-http    = { path = "../ank-http" }

tokio.workspace              = true
tokio-stream.workspace       = true
tonic.workspace              = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
dirs.workspace               = true
uuid.workspace               = true
openssl                      = { workspace = true, optional = true }
rustls                       = { version = "0.23", features = ["ring"] }
serde_json.workspace = true
serde.workspace = true
dotenvy.workspace = true
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }

[features]
full_local       = ["ank-core/full_local"]
embed-ui         = ["ank-http/embed-ui"]
vendored-openssl = ["openssl"]
